<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/CategoryFragment">

    <fragment
        android:id="@+id/CategoryFragment"
        android:name="com.example.quizz.CategoryFragment"
        android:label="@string/category_fragment_label"
        tools:layout="@layout/fragment_category">

        <action
            android:id="@+id/action_CategoryFragment_to_QuestionFragment"
            app:destination="@id/QuestionFragment" />
    </fragment>
    <fragment
        android:id="@+id/QuestionFragment"
        android:name="com.example.quizz.QuestionFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_question">

        <action
            android:id="@+id/action_QuestionFragment_to_CategoryFragment"
            app:destination="@id/CategoryFragment" />
        <action
            android:id="@+id/action_QuestionFragment_to_ScoreFragment"
            app:destination="@id/ScoreFragment">
            <argument
                android:name="score"
                app:argType="integer" />
            <argument
                android:name="username"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/ScoreFragment"
        android:name="com.example.quizz.ScoreFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_score">

        <action
            android:id="@+id/action_ScoreFragment_to_CategoryFragment"
            app:destination="@id/CategoryFragment" />
    </fragment>
</navigation>